# computer-vision

./: README.md
car classifier/: .gitignore  1_downloader.py  2_name_generator.py  3_making_image_dataset.ipynb  4_car_classifier.ipynb  5_inference.ipynb  README.md
cat dogs classifier/: .gitignore  README.md  data_prep_nb.ipynb  data_preparation.py  pyproject.toml  train_data.csv
cat dogs classifier/input/: train_data.csv
cat dogs classifier/notebooks/: classification_engine.ipynb  cv2rectange_example.py  cv2rectange_example_v2.py  cv2rectange_example_v3.py  data_prep_nb.ipynb  localization_engine.ipynb  localization_engine_colab.ipynb
cat dogs classifier/src/: check_bbox_with_transforms.py  check_pic.py  check_predicted_bbox.py  classification_engine.ipynb  classification_engine.py  config.py  cv2rectange_example.py  cv2rectange_example_v4.py  data_preparation.py  dataset.py  df_preparation.py  engine.ipynb  inference.py  localization_engine.ipynb  localization_engine.py  localization_engine_colab.ipynb  model.py  models.py  show_picture.py  transforms.py
