[tool.poetry]
name = "[cat dogs classifier]"
version = "0.1.0"
description = "cats vs dogs classification and localization"
authors = ["Oleg Peregudov <oleg.peregudov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
pandas = "^1.2.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
