[tool.poetry]
name = "[cat dogs classifier]"
version = "0.1.0"
description = "cats vs dogs classification and localization"
authors = ["Oleg Peregudov <oleg.peregudov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
pandas = "^1.2.3"
sklearn = "^0.0"
torch = "^1.8.1"
Pillow = "^8.2.0"
matplotlib = "^3.4.1"
albumentations = "^0.5.2"
ttach = "^0.0.3"
torchvision = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
